--- a/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
@@ -1,5 +1,5 @@
 <div class="flex-shrink-0 p-3" style="width: 280px;">
-    <a href="@PageFor.Root.Home" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
+    <a href="@Get.Page.Root.Home" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
         <svg class="bi pe-none me-2" width="30" height="24">
             <use xlink:href="#bootstrap"/>
         </svg>
@@ -77,13 +77,13 @@
                         <a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">New...</a>
                     </li>
                     <li>
-                        <a href="@PageFor.UserProfile.Details" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a>
+                        <a href="@Get.Page.UserProfile.Details" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a>
                     </li>
                     <li>
                         <a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Settings</a>
                     </li>
                     <li>
-                        <a href="@PageFor.User.Logout" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Log out</a>
+                        <a href="@Get.Page.User.Logout" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Log out</a>
                     </li>
                 </ul>
             </div>
