--- a/Sample.Hosted/Pages/User/Logout.cshtml
+++ b/Sample.Hosted/Pages/User/Logout.cshtml
@@ -14,6 +14,6 @@
 
     <div class="d-grid gap-2 d-md-flex">
         <button type="submit" class="btn btn-primary flex-fill">Log out</button>
-        <a asp-page="@PageFor.Root.Home" class="btn btn-secondary flex-fill">Cancel</a>
+        <a asp-page="@Get.Page.Root.Home" class="btn btn-secondary flex-fill">Cancel</a>
     </div>
 </form>
