--- a/Sample.Hosted/Pages/User/Management/EnableAuthenticator.cshtml
+++ b/Sample.Hosted/Pages/User/Management/EnableAuthenticator.cshtml
@@ -20,7 +20,7 @@
     </ul>
 
     <div class="col-auto mt-3">
-        <a href="@PageFor.User.Login" class="btn btn-secondary">Login</a>
+        <a href="@Get.Page.User.Login" class="btn btn-secondary">Login</a>
     </div>
 }
 else
