--- a/Sample.Hosted/Pages/User/Profile/Details.cshtml
+++ b/Sample.Hosted/Pages/User/Profile/Details.cshtml
@@ -32,7 +32,7 @@ else
         <dd class="col-sm-9">@Model.IdentityUser.PhoneNumber</dd>
 
         <dt class="col-sm-3">Slim UI</dt>
-        <dd class="col-sm-9">@ClaimFor.ProfileClaim.SlimUi</dd>
+        <dd class="col-sm-9">@Get.Claim.Profile.SlimUi</dd>
         <!-- Add more user details here if necessary -->
     </dl>
 }
