--- a/Sample.Hosted/Pages/User/Login.cshtml
+++ b/Sample.Hosted/Pages/User/Login.cshtml
@@ -31,5 +31,5 @@
 </form>
 
 <p class="mt-3">
-    <a asp-page="@PageFor.User.Register">Register as a new user</a>
+    <a asp-page="@Get.Page.User.Register">Register as a new user</a>
 </p>
