--- a/Sample.Hosted/Pages/User/Profile/Edit.cshtml
+++ b/Sample.Hosted/Pages/User/Profile/Edit.cshtml
@@ -41,7 +41,7 @@
     <div class="card-footer">
         <div class="col-auto">
             <button type="submit" class="btn btn-primary">Save Changes</button>
-            <a href="@PageFor.UserProfile.Details" class="btn btn-secondary">Cancel</a>
+            <a href="@Get.Page.UserProfile.Details" class="btn btn-secondary">Cancel</a>
         </div>
     </div>
 </form>
