--- a/Sample.Hosted/Pages/User/Register.cshtml
+++ b/Sample.Hosted/Pages/User/Register.cshtml
@@ -28,5 +28,5 @@
     <button type="submit" class="btn btn-primary w-100">Register</button>
 </form>
 <p class="mt-3">
-    <a asp-page="@PageFor.User.Login">Already have an account? Log in</a>
+    <a asp-page="@Get.Page.User.Login">Already have an account? Log in</a>
 </p>
