TempData & ViewData keys gathered into Get

--- a/Sample.Hosted/Pages/Home.cshtml
+++ b/Sample.Hosted/Pages/Home.cshtml
@@ -7,8 +7,8 @@
     options.Type = MainContentType.None;
     options.ColumnSize = BootstrapColumnSize.None;
     
-    ViewData[ViewDataFor.Title] = title;
-    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
+    ViewData[Get.ViewDataKeys.Title] = title;
+    ViewData[Get.ViewDataKeys.MainContentLayoutOptions] = options;
 }
 
 @* UI Examples
