--- a/Sample.Hosted/Pages/Shared/_LayoutBaseHtmx.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBaseHtmx.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>@ViewData[ViewDataFor.Title] - @ScopeContext.Settings.ApplicationName</title>
+    <title>@ViewData[Get.ViewDataKeys.Title] - @ScopeContext.Settings.ApplicationName</title>
 </head>
 <body class="d-flex flex-column bg-secondary-subtle vh-100">
 @RenderBody()
