--- a/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
@@ -1,3 +1,4 @@
+@using Sample.Hosted.Helpers
 <div class="flex-shrink-0 p-3" style="width: 280px;">
     <a href="@Get.Page.Root.Home" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
         <svg class="bi pe-none me-2" width="30" height="24">
