--- a/Sample.Hosted/Pages/_ViewImports.cshtml
+++ b/Sample.Hosted/Pages/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using NetEscapades.AspNetCore.SecurityHeaders
 @using Sample.Domain.Identity
 @using Sample.Hosted.Settings
+@using Sample.Hosted.Helpers
 @using Sample.Hosted.Pages
 @using Sample.Hosted.Pages.Shared.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
