--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -1,4 +1,5 @@
 @using DRN.Framework.SharedKernel.Enums
+@using Sample.Hosted.Helpers
 @using Sample.Hosted.TagHelpers
 
 <header class="navbar navbar-expand-lg container-xxl bg-primary" data-bs-theme="dark">
