--- a/Sample.Hosted/Pages/Test/Htmx.cshtml
+++ b/Sample.Hosted/Pages/Test/Htmx.cshtml
@@ -1,4 +1,5 @@
 @page
+@using Sample.Hosted.Helpers
 @model Sample.Hosted.Pages.Test.Csrf
 
 @{
@@ -7,8 +8,8 @@
     options.Type = MainContentType.None;
     options.ColumnSize = BootstrapColumnSize.None;
 
-    ViewData[ViewDataFor.Title] = title;
-    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
+    ViewData[Get.ViewDataKeys.Title] = title;
+    ViewData[Get.ViewDataKeys.MainContentLayoutOptions] = options;
 
     var headers = HttpContext.Request.Headers;
     //todo: request hub in development environment to monitor requests and errors
