SubNavigationFor & LayoutOptionsFor gathered into Get

--- a/Sample.Hosted/Pages/Home.cshtml
+++ b/Sample.Hosted/Pages/Home.cshtml
@@ -3,7 +3,7 @@
 
 @{
     var title = "Home Page";
-    var options = LayoutOptionsFor.Centered(string.Empty);
+    var options = Get.LayoutOptions.Centered(string.Empty);
     options.Type = MainContentType.None;
     options.ColumnSize = BootstrapColumnSize.None;
     
