--- a/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
+++ b/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
@@ -3,7 +3,7 @@
 
 @{
     var title = "Two-Factor Authentication";
-    var options = LayoutOptionsFor.Centered(title);
+    var options = Get.LayoutOptions.Centered(title);
     ViewData[Get.ViewDataKeys.Title] = title;
     ViewData[Get.ViewDataKeys.MainContentLayoutOptions] = options;
 }
