--- a/Sample.Hosted/Pages/User/Profile/Edit.cshtml
+++ b/Sample.Hosted/Pages/User/Profile/Edit.cshtml
@@ -1,13 +1,12 @@
 @page
-@using Sample.Hosted.Helpers
 @model Sample.Hosted.Pages.User.Profile.ProfileEditModel
 @{
     var title = "Edit User Profile";
-    var options = LayoutOptionsFor.Full(title);
-    options.SubNavigation=SubNavigationFor.ProfileSubNavigationCollection;
+    var options = Get.LayoutOptions.Full(title);
+    options.SubNavigation = Get.SubNavigation.ProfileSubNavigationCollection;
     options.Type = MainContentType.Card;
 
-    
+
     ViewData[Get.ViewDataKeys.Title] = title;
     ViewData[Get.ViewDataKeys.MainContentLayoutOptions] = options;
 }
@@ -18,7 +17,7 @@
 <form method="post">
     <div class="card-body">
         <div asp-validation-summary="All" class="text-danger"></div>
-        
+
         <div class="row mb-3">
             <div class="col-3">
                 <div class="form-floating col-auto">
@@ -28,7 +27,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="row mb-0">
             <div class="col-3">
                 <div class="form-group form-check">
@@ -38,7 +37,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="card-footer">
         <div class="col-auto">
             <button type="submit" class="btn btn-primary">Save Changes</button>
