application request pipeline observability improvements

--- a/Sample.Hosted/Pages/Shared/_Footer.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Footer.cshtml
@@ -2,6 +2,7 @@
 
 @{
     var showCookieAlertBanner = !ConsentContext.ConsentCookie.Values.UserResponded;
+    //todo fix footer alert 
 }
 
 <footer class="border-top footer text-muted mt-auto">
