json editor updated

--- a/DRN.Framework.Hosting/Areas/Developer/Pages/RuntimeExceptionPage.cshtml
+++ b/DRN.Framework.Hosting/Areas/Developer/Pages/RuntimeExceptionPage.cshtml
@@ -22,9 +22,9 @@ Source codes under this file is derived from https://github.com/dotnet/aspnetcor
     <meta charset="utf-8"/>
     <title>@Model.ErrorModel.Title</title>
     <link rel="stylesheet" href="/_content/DRN.Framework.Hosting/css/error-page.zV47vUlk.css" integrity="sha256-zV47vUlkxcDUdosQxA55Wt8MdJotJU2yGWMx0dMUnIQ="/>
-    <link rel="stylesheet" href="/_content/DRN.Framework.Hosting/jsoneditor/json-editor.4V053HdA.css" integrity="sha256-4V053HdAjQjEf/Vbc8uTc9nXlfe1zEdyvnJrCyi19e0="/>
+    <link rel="stylesheet" href="/_content/DRN.Framework.Hosting/jsoneditor/json-editor.myZBy9BE.css" integrity="sha256-myZBy9BExQ+5120XJzx+2vXF/1oxtQlXoX37Jf0IIGU="/>
     <link rel="stylesheet" href="/_content/DRN.Framework.Hosting/jsoneditor/json-editor-darktheme.Yy6r6Qb5.css" integrity="sha256-Yy6r6Qb5AmZc8EMbg2mHZRblQE/Fqf2sPQvlvwnbRmA="/>
-    <script src="/_content/DRN.Framework.Hosting/jsoneditor/json-editor.tHr7QPkd.js" integrity="sha256-tHr7QPkd2vlH0Kew/7MWEUmesgaL9p82i7r41bRnzC8="></script>
+    <script src="/_content/DRN.Framework.Hosting/jsoneditor/json-editor.DxnrBNd6.js" integrity="sha256-DxnrBNd6EAPEKWOoL43wMGYzdWsFUMuNYcUDl2feGSA="></script>
 
     <style>
         .jsoneditor {
