--- a/Sample.Hosted/Pages/Shared/_Footer.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Footer.cshtml
@@ -2,35 +2,27 @@
 
 @{
     var showCookieAlertBanner = !ConsentContext.ConsentCookie.Values.UserResponded;
-    //todo fix footer alert 
 }
-
-<footer class="border-top footer text-muted mt-auto">
+@*
+https://github.com/rstacruz/rsjs
+https://rstacruz.github.io/rsjs/
+*@
+<footer class="border-top footer text-muted mt-auto" data-js-drn-footer>
     <div class="container-xxl bg-light d-flex justify-content-between align-items-center py-1">
         <div id="FooterLeft">
             &copy; @DateTime.Now.Year - @ScopeContext.Settings.ApplicationName
         </div>
         <div id="FooterMiddle">
-            <nav id="footerNavbar" class="d-flex align-items-center">
+            <nav class="footerNavbar d-flex align-items-center">
                 <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link py-0" href="#">Privacy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link py-0" href="#">Terms</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link py-0" href="#">Security</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link py-0" href="#">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link py-0" href="#">FAQ</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link py-0" href="#">Privacy</a></li>
+                    <li class="nav-item"><a class="nav-link py-0" href="#">Terms</a></li>
+                    <li class="nav-item"><a class="nav-link py-0" href="#">Security</a></li>
+                    <li class="nav-item"><a class="nav-link py-0" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link py-0" href="#">FAQ</a></li>
                 </ul>
             </nav>
-            <div id="preferenceCookieAlert" class="d-none align-items-center" role="alert">
+            <div class="preferenceCookieAlert d-none align-items-center" role="alert">
                 <span class="me-3">We use cookies to enhance your experience. Check out our <a href="/Privacy" class="alert-link">Privacy Policy</a>.</span>
                 <button type="button" class="btn btn-primary btn-sm accept-policy me-2" aria-label="Accept" id="acceptPreferencesCookieBtn">
                     Accept
@@ -44,8 +36,8 @@
             <div id="preferenceManagementContainer" class="d-flex align-items-center">
                 <div class="dropup">
                     <!-- Main button for opening the cookie manager dropdown -->
-                    <button class="btn btn-sm btn-light dropdown-toggle" type="button" id="PreferenceManager" data-bs-toggle="dropdown" aria-expanded="false"
-                            aria-label="Preference Manager">
+                    <button class="btn btn-sm btn-light dropdown-toggle" type="button" id="PreferenceManager" 
+                            data-bs-toggle="dropdown" aria-expanded="false" aria-label="Preference Manager">
                         Preferences <i class="bi bi-sliders"></i>
                     </button>
 
@@ -84,9 +76,12 @@
     </div>
 </footer>
 
-<script>
-    drnApp.onmount.register("#footerNavbar", function () {
+<script>        
+    drnApp.showCookieBanner = @Json.Serialize(showCookieAlertBanner);
+    
+    drnApp.onmount.register("[data-js-drn-footer]", function () {
         'use strict';
+        const footerComponent = this;
         const preferencesCookieName = @Json.Serialize(ConsentContext.CookieName);
         const getPreferenceCookie = () => {
             const parts = `; ${document.cookie}`.split(`; ${preferencesCookieName}=`);
@@ -98,35 +93,35 @@
         const getPreferenceCookieWithDecode = () => JSON.parse(drnApp.utils.urlSafeBase64Decode(getPreferenceCookie()));
         let globalPreferences = getPreferenceCookieWithDecode();
 
-        const footerNavbar = "footerNavbar";
-        const preferenceCookieAlert = "preferenceCookieAlert";
-        const analyticsCookiesCheckBoxId = "analyticsCookiesCheckBox";
-        const marketingCookiesCheckBoxId = "marketingCookiesCheckBox";
-        const acceptPreferenceCookieBtn = "acceptPreferencesCookieBtn";
-        const rejectPreferenceCookieBtn = "rejectPreferencesCookieBtn";
-        const savePreferencesBtnId = "savePreferencesBtn";
-
+        const footerNavbar = ".footerNavbar";
+        const preferenceCookieAlert = ".preferenceCookieAlert";
+        const analyticsCookiesCheckBoxId = "#analyticsCookiesCheckBox";
+        const marketingCookiesCheckBoxId = "#marketingCookiesCheckBox";
+        const acceptPreferenceCookieBtnId = "#acceptPreferencesCookieBtn";
+        const rejectPreferenceCookieBtnId = "#rejectPreferencesCookieBtn";
+        const savePreferencesBtnId = "#savePreferencesBtn";
+        
         const savePreferences = (preferences) => {
             globalPreferences = preferences;
             const preferencesAsJson = JSON.stringify(preferences);
             const preferencesJsonAsEncoded = drnApp.utils.urlSafeBase64Encode(preferencesAsJson);
             const oneYearInSeconds = 365 * 24 * 60 * 60; // Set the cookie to expire in 1 year using Max-Age
             document.cookie = `${preferencesCookieName}=${preferencesJsonAsEncoded}; path=/; Max-Age=${oneYearInSeconds}; SameSite=Strict;`;
-            document.getElementById(preferenceCookieAlert).classList.replace("d-flex", "d-none");
+
             adjustFooterVisibility(false);
             loadPreferences();
         }
         const loadPreferences = () => {
-            document.getElementById(analyticsCookiesCheckBoxId).checked = globalPreferences.AnalyticsConsent || false;
-            document.getElementById(marketingCookiesCheckBoxId).checked = globalPreferences.MarketingConsent || false;
+            footerComponent.querySelector(analyticsCookiesCheckBoxId).checked = globalPreferences.AnalyticsConsent || false;
+            footerComponent.querySelector(marketingCookiesCheckBoxId).checked = globalPreferences.MarketingConsent || false;
         }
         const adjustFooterVisibility = (showCookieAlertBanner) => {
             if (showCookieAlertBanner) {
-                document.getElementById(footerNavbar).classList.replace("d-flex", "d-none");
-                document.getElementById(preferenceCookieAlert).classList.replace("d-none", "d-flex");
+                footerComponent.querySelector(footerNavbar).classList.replace("d-flex", "d-none");
+                footerComponent.querySelector(preferenceCookieAlert).classList.replace("d-none", "d-flex");
             } else {
-                document.getElementById(footerNavbar).classList.replace("d-none", "d-flex");
-                document.getElementById(preferenceCookieAlert).classList.replace("d-flex", "d-none");
+                footerComponent.querySelector(footerNavbar).classList.replace("d-none", "d-flex");
+                footerComponent.querySelector(preferenceCookieAlert).classList.replace("d-flex", "d-none");
             }
         }
         const createPreferences = (analyticsConsent, marketingConsent) => ({
@@ -135,14 +130,14 @@
         });
 
         loadPreferences();
-        document.getElementById(acceptPreferenceCookieBtn).addEventListener("click", () => savePreferences(createPreferences(true, true)));
-        document.getElementById(rejectPreferenceCookieBtn).addEventListener("click", () => savePreferences(createPreferences(false, false)));
-        document.getElementById(savePreferencesBtnId)?.addEventListener("click", function () {
-            const analytics = document.getElementById(analyticsCookiesCheckBoxId).checked;
-            const marketing = document.getElementById(marketingCookiesCheckBoxId).checked;
+        footerComponent.querySelector(acceptPreferenceCookieBtnId).addEventListener("click", () => savePreferences(createPreferences(true, true)));
+        footerComponent.querySelector(rejectPreferenceCookieBtnId).addEventListener("click", () => savePreferences(createPreferences(false, false)));
+        footerComponent.querySelector(savePreferencesBtnId)?.addEventListener("click", function () {
+            const analytics = footerComponent.querySelector(analyticsCookiesCheckBoxId).checked;
+            const marketing = footerComponent.querySelector(marketingCookiesCheckBoxId).checked;
             savePreferences(createPreferences(analytics, marketing));
         });
-
-        adjustFooterVisibility(@Json.Serialize(showCookieAlertBanner));
+        
+        adjustFooterVisibility(drnApp.showCookieBanner);
     });
 </script>
