Sample.Hosted lib scripts updated

--- a/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
@@ -24,9 +24,9 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
 
         @*https://icons.getbootstrap.com/#usage*@
         @*todo: bootstrap customizations https://getbootstrap.com/docs/5.3/customize/overview/*@
-        <link rel="preload" href="~/lib/bootstrap/fonts/bootstrap-icons.woff2?dd67030699838ea613ee6dbda90effa6" as="font" crossorigin="anonymous">
-        <link href="~/lib/bootstrap/bootstrap.min.0Tv1es0K.css" rel="stylesheet" crossorigin="anonymous" integrity="sha256-0Tv1es0KeOQQ8CeN/TXxE4tcarz5oxYvC1Ah5SvU7lo="/>
-        <link href="~/lib/bootstrap/bootstrap-icons.min.9kPWn5nn.css" rel="stylesheet" crossorigin="anonymous" integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI="/>
+        <link rel="preload" href="~/lib/bootstrap/fonts/bootstrap-icons.woff2?e34853135f9e39acf64315236852cd5a" as="font" crossorigin="anonymous">
+        <link href="~/lib/bootstrap/bootstrap.min.PI8n5gCc.css" rel="stylesheet" crossorigin="anonymous" integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g="/>
+        <link href="~/lib/bootstrap/bootstrap-icons.min.pdY4ejLK.css" rel="stylesheet" crossorigin="anonymous" integrity="sha256-pdY4ejLKO67E0CM2tbPtq1DJ3VGDVVdqAR6j3ZwdiE4="/>
 
         <!-- Custom CSS -->
         <link href="~/css/site.css?v=1" rel="stylesheet"/>
@@ -40,7 +40,7 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
         </script>
         <!-- Preload -->
 
-        <script src="~/lib/htmx/htmx.min.4gndpcgj.js" crossorigin="anonymous" integrity="sha256-4gndpcgjVHnzFm3vx3UOHbzVpcGAi3eS/C5nM3aPtEc="></script>
+        <script src="~/lib/htmx/htmx.w8PAL1AR.js" crossorigin="anonymous" integrity="sha256-/w8PAL1ARp5bpDBgXUY+EifqcBtlFZXJicKfBYKN40E="></script>
         <script src="~/lib/htmx/safe-nonce.rscDWfKx.js" crossorigin="anonymous" integrity="sha256-rscDWfKxSAHJUDm6aADpKS6kAo3KShDaAN0B/aW1VqM="></script>
         <script src="~/lib/jquery/jquery.min.PnUB0Vw2.js" crossorigin="anonymous" integrity="sha256-PnUB0Vw2MOeRyLIDkuud7jGp9lzj793nbO9ccQFBqyQ="></script>
         <script src="~/lib/onmount/onmount.tS6D5Yzw.js" crossorigin="anonymous" integrity="sha256-tS6D5Yzwxoy/uLQA9mVEiTu/GaafGn+we0HjTlj4zzM="></script>
@@ -52,7 +52,7 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
 <body class="d-flex flex-column bg-secondary-subtle vh-100" style="overflow: hidden;" hx-ext="safe-nonce" hx-boost="true" hx-history="false">
 @RenderBody()
 
-<script defer src="~/lib/bootstrap/bootstrap.bundle.min.CDOy6cOi.js" crossorigin="anonymous" integrity="sha256-CDOy6cOibCWEdsRiZuaHf8dSGGJRYuBGC+mjoJimHGw="></script>
+<script defer src="~/lib/bootstrap/bootstrap.bundle.min.NfRUfZNk.js" crossorigin="anonymous" integrity="sha256-NfRUfZNkERrKSFA0c1a8VmCplPDYtpTYj5lQmKe1R/o="></script>
 <script defer src="~/lib/jquery/jquery.validate.min.umbTaFxP31.js" crossorigin="anonymous" integrity="sha256-umbTaFxP31Fv6O1itpLS/3+v5fOAWDLOUzlmvOGaKV4="></script>
 <script defer src="~/lib/jquery/jquery.validate.unobtrusive.min.YJa7W8Ei.js" crossorigin="anonymous" integrity="sha256-YJa7W8EiQdQpkk93iGEjjnLSUWRpRJbSfzfURh1kxz4="></script>
 
