htmx version updated

--- a/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
@@ -40,7 +40,7 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
         </script>
         <!-- Preload -->
 
-        <script src="~/lib/htmx/htmx.w8PAL1AR.js" crossorigin="anonymous" integrity="sha256-/w8PAL1ARp5bpDBgXUY+EifqcBtlFZXJicKfBYKN40E="></script>
+        <script src="~/lib/htmx/htmx.8xzDzxYQ.js" crossorigin="anonymous" integrity="sha256-8xzDzxYQnXrnW+ppKFQMaKJDvqEjRDIcRNy5fWyIVns="></script>
         <script src="~/lib/htmx/safe-nonce.rscDWfKx.js" crossorigin="anonymous" integrity="sha256-rscDWfKxSAHJUDm6aADpKS6kAo3KShDaAN0B/aW1VqM="></script>
         <script src="~/lib/jquery/jquery.min.PnUB0Vw2.js" crossorigin="anonymous" integrity="sha256-PnUB0Vw2MOeRyLIDkuud7jGp9lzj793nbO9ccQFBqyQ="></script>
         <script src="~/lib/onmount/onmount.tS6D5Yzw.js" crossorigin="anonymous" integrity="sha256-tS6D5Yzwxoy/uLQA9mVEiTu/GaafGn+we0HjTlj4zzM="></script>
