layout badge overflow fix

--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
         <partial name="_Sidebar"/>
     }
 
-    <div class="d-flex flex-column flex-grow-1" style="overflow-y: hidden;">
+    <div class="d-flex flex-column flex-grow-1 mt-1" style="overflow-y: hidden;">
         @if (ScopeContext.MFACompleted)
         {
             <partial name="_SubNavigation"/>
