--- a/Sample.Hosted/Pages/Shared/_SidebarActionbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarActionbar.cshtml
@@ -6,7 +6,7 @@
 
 <aside class="d-flex p-1 bg-body-tertiary flex-column align-items-center">
     <nav class="flex-grow-1" style="overflow-y:auto; overflow-x: hidden">
-        <ul id="ActionbarActionList" class="nav nav-pills nav-flush flex-column mb-auto">
+        <ul id="ActionbarActionList" class="nav nav-pills nav-flush flex-column mt-1 mb-auto">
             @foreach (var navItem in sidebarActionCollection.Items)
             {
                 var borderBottom = ++index == actionCount ? "border-bottom" : "";
