--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -12,7 +12,7 @@
 <aside class="d-flex p-1 bg-body-tertiary flex-column align-items-center">
     <!-- Scrollable Navigation Section -->
     <nav class="flex-grow-1" style="overflow-y:auto; overflow-x: hidden">
-        <ul class="nav nav-pills nav-flush flex-column mb-auto">
+        <ul class="nav nav-pills nav-flush flex-column mt-1 mb-auto">
             @foreach (var navItem in sidebarNavigationCollection.Items)
             {
                 var titleAsText = isSlim ? string.Empty : navItem.Title;
